--- a/04_Servlet/jspProject/src/main/java/db/driver/driver.properties
+++ b/04_Servlet/jspProject/src/main/java/db/driver/driver.properties
@@ -2,5 +2,5 @@
 #Thu Aug 28 12:22:23 KST 2025
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:xe
-username=c##jsp
-password=jsp
+username=C##JSP
+password=JSP
