--- a/05_Spring/spring/src/main/resources/application.properties
+++ b/05_Spring/spring/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.password=JSP
 mybatis.type-aliases-package=com.kh.spring.model.vo
 mybatis.mapper-locations=mappers/*.xml
 mybatis.configuration.jdbc-type-for-null=varchar
+
+#??? ????? ???
+seoul.api.key
