--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,java
+06_React/react-profile-test/node_modules/
