--- a/07_rest_server/test/src/main/resources/application.yml
+++ b/07_rest_server/test/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:tcp://localhost/??????/tdb
+      jdbc-url: jdbc:h2:tcp://localhost
       driver-class-name: org.h2.Driver
       username: sa
       password:
@@ -19,6 +19,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     show-sql: true
     properties:
       hibernate:
