--- a/07_rest_server/test/src/main/resources/application.yml
+++ b/07_rest_server/test/src/main/resources/application.yml
@@ -4,10 +4,10 @@ spring:
 
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:tcp://localhost
+      jdbc-url: jdbc:h2:tcp://localhost/C:\workspace\07_rest_server\test/tdb
       driver-class-name: org.h2.Driver
       username: sa
-      password:
+      password: 1234
   h2:
     console:
       enabled: true
@@ -29,9 +29,3 @@ spring:
 
 server:
   port: 8888
-
-  servlet:
-    encoding:
-      charset: UTF-8
-      enabled: true
-      force: true
